# msg-prototype

./: Gemfile  README.md  commands.txt
app/assets/javascripts/: application.js  chart.js
app/assets/stylesheets/: custom.css.scss
app/controllers/: application_controller.rb  charts_controller.rb  devices_controller.rb  measurements_controller.rb  sensors_controller.rb  static_pages_controller.rb  users_controller.rb
app/helpers/: application_helper.rb  sessions_helper.rb
app/models/: device.rb  device_type.rb  measurement.rb  sensor.rb  sensor_type.rb  sensor_type_unit.rb  unit.rb  user.rb
app/policies/: device_policy.rb  sensor_policy.rb  user_policy.rb
app/views/devices/: _device.html.erb  _form.html.erb  edit.html.erb  index.html.erb  index.json.jbuilder  show.html.erb  show.json.jbuilder
app/views/layouts/: _footer.html.erb  _header.html.erb  application.html.erb
app/views/sensors/: _form.html.erb  _sensor.html.erb  edit.html.erb  index.html.erb  index.json.jbuilder  show.html.erb
app/views/sessions/: new.html.erb
app/views/shared/: _error_messages.html.erb
app/views/static_pages/: about.html.erb  contact.html.erb  dashboard.html.erb  help.html.erb  home.html.erb
app/views/users/: _form.html.erb  _user.html.erb  edit.html.erb  index.html.erb  new.html.erb  show.html.erb
client/shell/: client.sh
client/websocket-rails-client-cpp/: CMakeLists.txt
client/websocket-rails-client-cpp/websocket-rails-client/: CMakeLists.txt  client.cpp  client2.cpp  commands.txt  demo_load.cpp  msgwebsocket.cpp  msgwebsocket.hpp  websocket.hpp  websocket_connection.cpp  websocket_rails.cpp  websocket_rails.hpp
config/: application.rb  database.yml.example  events.rb  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: redis.rb  secret_token.rb
config/locales/: de.yml  en.yml
db/: schema.rb  seeds.rb
db/migrate/: 20140910125533_add_uuid_to_sensors.rb  20141001091253_create_devices.rb  20141001091254_create_sensor_types.rb  20141001092039_create_device_types.rb  20141001121629_remove_user_id_from_sensors.rb  20141001122024_add_device_id_to_sensors.rb  20141002112442_add_sensor_type_id_to_sensors.rb  20141007130112_create_units.rb  20141007130737_add_unit_id_to_sensors.rb  20141007135040_add_max_value_to_sensors.rb  20141007141250_add_min_value_to_sensors.rb  20141010141542_create_sensor_type_units.rb  20141010150454_remove_unit_id_from_sensors.rb  20141010150647_remove_sensor_type_id_from_sensors.rb  20141010151131_add_sensor_type_unit_id_to_sensors.rb
doc/: installation.md  update.md
lib/support/init.d/: rails
lib/tasks/: batch.rake
spec/: factories.rb  spec_helper.rb
spec/models/: device_spec.rb  device_type_spec.rb  sensor_spec.rb  sensor_type_spec.rb  sensor_type_unit_spec.rb  unit_spec.rb  user_spec.rb
spec/requests/: authentication_pages_spec.rb  device_pages_spec.rb  static_pages_spec.rb  user_pages_spec.rb
spec/support/: utilities.rb
